GNOME Bugzilla – Bug 655526
CONSTRUCT properties won't be deserialized
Last modified: 2012-03-13 22:08:24 UTC
Occording to comment in the source GObject deserialization done it two pass: first pass for CONSTRUCT and CONSTRUCT_ONLY properties, then the others. However CONSTRUCT properties never deserialized as json_gobject_new skip but G_PARAM_CONSTRUCT_ONLY parameters. I think that CONSTRUCT properties should be deserialized as they serialized. Reproduce the problem: change one the properties in test-serialize-full to CONSTRUCT and it will fail. Thank you for your help.
thanks, fixed in the master branch; it'll be available with JSON-GLib 0.14.0.
[Fixing Default QA assignee for json-glib - see 613232#c1. Sorry for bugmail noise.]